@@ -53,8 +53,8 @@ OXFUNCTIONS=@oxfunctions@
 OXCONFIG=@oxscriptconf@
 
 test -f $OXFUNCTIONS || {
-	echo "missing common shell functions file"
-	exit 1
+    echo "missing common shell functions file"
+    exit 1
 }
 
 . $OXFUNCTIONS
@@ -71,4 +71,4 @@ ADMINCP=$(for jar in $LIBPATH/*.jar; do
     echo -n "${jar}:"
     done)
 
-$JAVA_BIN $JAVA_XTRAOPTS -classpath ${ADMINCP} $JAVAMAIN $*
+$JAVA_BIN $JAVA_OXCMD_OPTS -classpath ${ADMINCP} $JAVAMAIN $*
