@@ -53,8 +53,8 @@ OXFUNCTIONS=@oxfunctions@
 OXCONFIG=@oxscriptconf@
 
 test -f $OXFUNCTIONS || {
-	echo "missing common shell functions file"
-	exit 1
+    echo "missing common shell functions file"
+    exit 1
 }
 
 . $OXFUNCTIONS
@@ -63,11 +63,12 @@ test -f $OXCONFIG && . $OXCONFIG
 
 ox_set_JAVA_BIN
 
-
 test -z "$LIBPATH"          && LIBPATH=${PREFIX}jar
 
 JAVAMAIN="com.openexchange.admin.user.copy.console.UserCopy"
+
 ADMINCP=$(for jar in $LIBPATH/*.jar; do
     echo -n "${jar}:"
     done)
-$JAVA_BIN $JAVA_OXCMD_OPTS $JAVA_XTRAOPTS -classpath ${ADMINCP} $JAVAMAIN "$@"
+
+$JAVA_BIN $JAVA_OXCMD_OPTS -classpath ${ADMINCP} $JAVAMAIN "$@"
