@@ -4,8 +4,10 @@ PROPERTIESDIR=@propertiesdir@
 LOGGINGPROPERTIES=@loggingproperties@
 OSGIPATH=@oxgroupwaresysconfdir@/osgi
 
-# This properties sets the java options given to the groupware on start
+# Defines the Java options for the groupware Java virtual machine.
 JAVA_XTRAOPTS="-Dsun.net.inetaddr.ttl=3600 -Dnetworkaddress.cache.ttl=3600 -Dnetworkaddress.cache.negative.ttl=10 -server -Djava.awt.headless=true -Xmx512M -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:NewRatio=3 -XX:+UseTLAB -XX:+DisableExplicitGC -Dosgi.compatibility.bootdelegation=false"
+
+# Defines the Java options for all command line tools. CLTs need much less memory compared to the groupware process.
 JAVA_OXCMD_OPTS="-Djava.net.preferIPv4Stack=true"
 
 # Maximum number of open Files for the groupware
