@@ -1,3 +1,7 @@
+* 2013-04-02 - marcus.klein@open-xchange.com
+
+ - Fix for bug 24581: Using only special Java options for CLTs in all scripts starting some CLT.
+
 * 2013-04-01 - thorben.betten@open-xchange.com
 
  - Fix for bug 25636: Limited changeable contact fields to reasonable ones
